--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,27 @@
+source:
+  # Whether this pipe is enabled or not.
+  # Defaults to `false`
+  enabled: true
+# before:
+#   hooks:
+#     # You may remove this if you don't use go modules.
+#     - go mod download
+#     # you may remove this if you don't need go generate
+#     - go generate ./...
+# builds:
+# - env:
+#   - CGO_ENABLED=0
+# archives:
+# - replacements:
+#     darwin: Darwin
+#     linux: Linux
+#     windows: Windows
+#     386: i386
+#     amd64: x86_64
+# checksum:
+#   name_template: 'checksums.txt'
+# snapshot:
+#   name_template: "{{ .Tag }}-next"
 changelog:
   sort: asc
   filters:
